begin van site aanmaken
framework duidelijk maken

--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Pra opendag</title>
     
 </head>
 <body>
     <header>
-        <h1>Curio</h1>
+        <img src="Logos\curio-04-rood-logo-rgb.png" alt="Curio">
+        <nav>
+            <a href="#info">iets</a>
+            <a href="lala">iets</a>
+        </nav>
     </header>
     <main>
-        <p>hier staat shit</p>
+        <section id="info" class="info">
+            <div class="info">
+                <img src="Fotos_locaties/Sanne Bas - Curio - Terheijdenseweg 350-2.jpg" alt="Foto school">
+                <h2>Opleiding info</h2>
+                <p>bla bla bla yap yap</p> 
+            </div>  
+        </section>
+
+        <!-- Tijdens de opleiding software developer leer jij alles over apps en programmeren. Ben jij straks die professional met kennis van C#, PHP en Javascript? Je ontwikkelt bijvoorbeeld webbased applicaties, websites, toepassingssoftware en media. Je houdt rekening met de wensen van de klant en je test je apps zelf. Een software developer is klantgericht en bouwt (onderdelen van) applicaties of software in opdracht van bijvoorbeeld bedrijven. Als software developer ontwerp je in een team en voer je testen uit. Je bent sociaal, maar je kunt ook prima alleen werken. Ook vind je online veiligheid erg belangrijk. -->
     </main>
     <footer>
 
