overzicht/rooster toegevoegd
backbone van overzicht en rooster toegevoeg. Text moet nog veranderd worden en achtergrond moet nog een kleur

--- a/index.html
+++ b/index.html
@@ -12,17 +12,39 @@
         <img src="Logos\curio-04-rood-logo-rgb.png" alt="Curio">
         <nav>
             <a href="#info">iets</a>
-            <a href="lala">iets</a>
+            <a href="#overzicht">iets</a>
+            <a href="#rooster">iets</a>
         </nav>
     </header>
     <main>
         <section id="info" class="info">
             <div class="info">
                 <img src="Fotos_locaties/Sanne Bas - Curio - Terheijdenseweg 350-2.jpg" alt="Foto school">
-                <h2>Opleiding info</h2>
-                <p>bla bla bla yap yap</p> 
+                <div class="infoText">
+                    <h2>Opleiding info</h2>
+                    <p>bla bla bla yap yap</p> 
+                </div>
             </div>  
         </section>
+
+        <section id="overzicht" class="overzicht">
+            <div class="overzichtDiv">
+                <h1>Opleiding overzicht</h1>
+                <img src="Opleidingsoverzicht3.png" alt="opleidingoverzicht">
+            </div>
+        </section>
+
+        <section id="rooster" class="rooster">
+            <div class="rooster">
+                <div class="roosterText">
+                    <h2>Rooster</h2>
+                    <p>bla bla bla yap yap</p> 
+                </div>
+            <img src="Rooster eerste leerjaar.png" alt="Rooster">
+            </div>  
+        </section>
+
+
 
         <!-- Tijdens de opleiding software developer leer jij alles over apps en programmeren. Ben jij straks die professional met kennis van C#, PHP en Javascript? Je ontwikkelt bijvoorbeeld webbased applicaties, websites, toepassingssoftware en media. Je houdt rekening met de wensen van de klant en je test je apps zelf. Een software developer is klantgericht en bouwt (onderdelen van) applicaties of software in opdracht van bijvoorbeeld bedrijven. Als software developer ontwerp je in een team en voer je testen uit. Je bent sociaal, maar je kunt ook prima alleen werken. Ook vind je online veiligheid erg belangrijk. -->
     </main>
