--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
                 <div class="box"> 
                     <h2>Codelap</h2>
-                    <p>Codelap is een huiswerk uurtje waarbij je extra vragen kan stellen of als je wilt een extra opdracht wilt beginnen.</p>
+                    <p>Codelap is een huiswerk uurtje waarbij je extra vragen kan stellen of als je wilt een extra opdracht wilt beginnen</p>
                 </div>
             </div>
         </section>
