Rooster info aanpassen

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="rooster">
                 <div class="roosterText">
                     <h2>Rooster</h2>
-                    <p>bla bla bla yap yap</p> 
+                    <p>Hiernaast zie je een voorbeeld van een rooster in het eerste jaar. <br> <br> <br> Als je wilt weten wat elk vak inhoud kan je hieronder kijken.</p> 
                 </div>
             <img src="Rooster eerste leerjaar.png" alt="Rooster">
             </div>  
