Text verder naar links zetten
text van de info dichter bij de img zetten

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="info">
                 <img src="Fotos_locaties/Sanne Bas - Curio - Terheijdenseweg 350-2.jpg" alt="Foto school">
                 <div class="infoText">
-                    <h2>Opleiding info</h2>
-                    <p>bla bla bla yap yap</p> 
+                    <h2>Welkom op de Curio Open Dag!</h2>
+                    <p>Heb je een passie voor softwareontwikkeling? Droom je ervan om innovatieve applicaties, websites en oplossingen te creëren die de digitale wereld transformeren? Dan ben je hier aan het juiste adres! Welkom op de Open Dag van Curio, waar we je uitnodigen om de spannende mogelijkheden in de wereld van softwareontwikkeling te verkennen.<br> <br> Bij Curio leren we hoe je programmeur kunt worden. Als je klaar bent, betekent dit dat je in een breed scala aan banen of verdere educatie kunt gaan. Je begint met het leren van web en native, zodat je een goed gevoel krijgt, zelfs als je nog nooit een ontwikkelingstool hebt aangeraakt. Daarna, in het derde jaar, maak je je keuze: webontwikkelaar? Of native ontwikkelaar?</p> 
                 </div>
             </div>  
         </section>
