--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#overzicht">Overzicht</a>
             <a href="#rooster">Rooster</a>
             <a href="#vakken">Vakken</a>
+            <a href="#talen">Talen</a>
         </nav>
     </header>
     <main>
@@ -94,6 +95,36 @@
                     <h2>Codelap</h2>
                     <p>Codelap is een huiswerk uurtje waarbij je extra vragen kan stellen of als je wilt een extra opdracht wilt beginnen</p>
                 </div>
+            </div>
+        </section>
+
+        <section id="talen" class="talen">
+            <h1>Talen die je in het eerste jaar gaat leren</h1>
+            <div class="vakken">
+                <div class="box1"> 
+                    <img src="HTML logo.png" alt="html">
+                    <h2>HTML</h2>
+                </div>
+                <div class="box1"> 
+                    <img src="CSS logo.png" alt="css">
+                    <h2>CSS</h2>
+                </div>    
+                <div class="box1"> 
+                    <img src="php logo.png" alt="php">
+                    <h2>PHP</h2>
+                </div>    
+                <div class="box1"> 
+                    <img src="javascript2 logo.png" alt="java">
+                    <h2>Javascript</h2>
+                </div>    
+                <div class="box1"> 
+                    <img src="Python logo.png" alt="Python">
+                    <h2>Python</h2>
+                </div>    
+                <div class="box1"> 
+                    <img src="SQL logo.png" alt="Sql">
+                    <h2>SQL</h2>
+                </div>         
             </div>
         </section>
         
