sql veranderd naar c#

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                     <h2>Python</h2>
                 </div>    
                 <div class="box1"> 
-                    <img src="SQL logo.png" alt="Sql">
-                    <h2>SQL</h2>
+                    <img src="c-sharp-logo-.png" alt="C#">
+                    <h2>C#</h2>
                 </div>         
             </div>
         </section>
@@ -131,7 +131,7 @@
 
         <!-- Tijdens de opleiding software developer leer jij alles over apps en programmeren. Ben jij straks die professional met kennis van C#, PHP en Javascript? Je ontwikkelt bijvoorbeeld webbased applicaties, websites, toepassingssoftware en media. Je houdt rekening met de wensen van de klant en je test je apps zelf. Een software developer is klantgericht en bouwt (onderdelen van) applicaties of software in opdracht van bijvoorbeeld bedrijven. Als software developer ontwerp je in een team en voer je testen uit. Je bent sociaal, maar je kunt ook prima alleen werken. Ook vind je online veiligheid erg belangrijk. -->
     </main>
-    <footer>
+    <footer>    
 
     </footer>
 </body>
