codelap naar codelab
codelab verkeerd geschreven nu veranderd

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 </div>
         
                 <div class="box"> 
-                    <h2>Codelap</h2>
-                    <p>Codelap is een huiswerk uurtje waarbij je extra vragen kan stellen of als je wilt een extra opdracht wilt beginnen</p>
+                    <h2>Codelab</h2>
+                    <p>Codelab is een huiswerk uurtje waarbij je extra vragen kan stellen of als je wilt een extra opdracht wilt beginnen</p>
                 </div>
             </div>
         </section>
